--- a/ac_core/build.gradle
+++ b/ac_core/build.gradle
@@ -51,4 +51,12 @@ dependencies {
     //ButterKnife
     api 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+    //cardView
+    api 'com.android.support:cardview-v7:26.0.1'
+    //recyclerView
+    api 'com.android.support:recyclerview-v7:26.0.1'
+    //gson
+    api 'com.google.code.gson:gson:2.5'
+    //圆形imageView
+    api 'de.hdodenhof:circleimageview:3.0.0'
 }
