--- a/ac_core/build.gradle
+++ b/ac_core/build.gradle
@@ -22,21 +22,30 @@ android {
     }
 
 }
-
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        def requested = details.requested
+        if (requested.group == 'com.android.support') {
+            if (!requested.name.startsWith("multidex")) {
+                details.useVersion '26.1.0'
+            }
+        }
+    }
+}
 dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    api 'com.android.support:appcompat-v7:26.0.1'
-    api 'com.android.support:design:26.0.1'
-    api 'com.android.support.constraint:constraint-layout:1.0.2'
+    api 'com.android.support:appcompat-v7:26.1.0'
+    api 'com.android.support:design:26.1.0'
+    api 'com.android.support.constraint:constraint-layout:1.1.3'
 //    api 'org.ros.android_core:android_10:[0.3,0.4)'
     //RosJava
-    api 'org.ros.rosjava_core:rosjava:[0.3,0.4)'
-    api 'org.ros.rosjava_messages:geometry_msgs:[1.12,1.13)'
-    api "org.ros.rosjava_messages:diagnostic_msgs:[1.11,1.12)"
-    api "org.ros.rosjava_messages:sensor_msgs:[1.11,1.12)"
+    api 'org.ros.rosjava_core:rosjava:0.3.6'
+    api 'org.ros.rosjava_messages:geometry_msgs:1.12.7'
+    api "org.ros.rosjava_messages:diagnostic_msgs:1.11.9"
+    api "org.ros.rosjava_messages:sensor_msgs:1.11.9"
     //字体图标
     api('com.joanzapata.iconify:android-iconify-fontawesome:2.2.2') {
         exclude group: 'com.android.support'
@@ -52,11 +61,13 @@ dependencies {
     api 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     //cardView
-    api 'com.android.support:cardview-v7:26.0.1'
+    api 'com.android.support:cardview-v7:26.1.0'
     //recyclerView
-    api 'com.android.support:recyclerview-v7:26.0.1'
+    api 'com.android.support:recyclerview-v7:26.1.0'
     //gson
-    api 'com.google.code.gson:gson:2.5'
+    api 'com.google.code.gson:gson:2.8.2'
     //圆形imageView
     api 'de.hdodenhof:circleimageview:3.0.0'
+    //qmui
+    api 'com.qmuiteam:qmui:1.0.6'
 }
