--- a/ac_core/build.gradle
+++ b/ac_core/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.jakewharton.butterknife'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 29
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 26
+        targetSdkVersion var
         versionCode 1
         versionName "1.0"
 
@@ -33,19 +33,25 @@ configurations.all {
     }
 }
 dependencies {
-    api fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    api group: 'org.jboss.netty', name: 'netty', version: '3.2.10.Final'
     api 'com.android.support:appcompat-v7:26.1.0'
     api 'com.android.support:design:26.1.0'
     api 'com.android.support.constraint:constraint-layout:1.1.3'
-//    api 'org.ros.android_core:android_10:[0.3,0.4)'
+//    api 'org.ros.android_core:android_10:0.3.3'
     //RosJava
     api 'org.ros.rosjava_core:rosjava:0.3.6'
+    api 'org.ros.rosjava_bootstrap:message_generation:0.3.3'
+    api 'org.ros.rosjava_messages:visualization_msgs:1.12.7'
     api 'org.ros.rosjava_messages:geometry_msgs:1.12.7'
-    api "org.ros.rosjava_messages:diagnostic_msgs:1.11.9"
-    api "org.ros.rosjava_messages:sensor_msgs:1.11.9"
+    api "org.ros.rosjava_messages:diagnostic_msgs:1.12.7"
+    api "org.ros.rosjava_messages:sensor_msgs:1.12.7"
+    api 'org.ros.rosjava_messages:rosgraph_msgs:1.11.2'
+    api 'org.ros.rosjava_messages:nav_msgs:1.12.7'
+    api 'org.ros.rosjava_messages:std_msgs:0.5.11'
+    api 'org.ros.rosjava_messages:tf2_msgs:0.5.20'
     //字体图标
     api('com.joanzapata.iconify:android-iconify-fontawesome:2.2.2') {
         exclude group: 'com.android.support'
@@ -70,4 +76,7 @@ dependencies {
     api 'de.hdodenhof:circleimageview:3.0.0'
     //qmui
     api 'com.qmuiteam:qmui:1.0.6'
+    configurations {
+        all*.exclude group: 'io.netty'
+    }
 }
