--- a/android_10/build.gradle
+++ b/android_10/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 29
 
 
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 26
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
 
@@ -26,4 +26,5 @@ android {
 
 dependencies {
     api project(':ac_ui')
+//    api 'com.google.guava:guava:28.1-android'
 }
