--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,6 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+ext {
+    var = 29
+}// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
 
@@ -9,7 +11,7 @@ buildscript {
     }
     dependencies {
 
-        classpath 'com.android.tools.build:gradle:3.2.0'
+        classpath 'com.android.tools.build:gradle:3.2.1'
         classpath 'com.jakewharton:butterknife-gradle-plugin:9.0.0-rc2'
 
 
@@ -22,6 +24,9 @@ allprojects {
     repositories {
         maven {
             url "https://github.com/rosjava/rosjava_mvn_repo/raw/master"
+        }
+        maven {
+            url "https://maven.google.com"
         }
         mavenCentral()
         google()
