--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ ext {
 buildscript {
 
     repositories {
-
+        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
         google()
         jcenter()
     }
@@ -22,6 +22,7 @@ buildscript {
 
 allprojects {
     repositories {
+        mavenCentral()
         maven {
             url "https://github.com/rosjava/rosjava_mvn_repo/raw/master"
         }
