--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 29
     defaultConfig {
         applicationId "cn.edu.uestc.cssl.activities"
-        minSdkVersion 21
+        minSdkVersion 26
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -37,7 +37,10 @@ android {
 
 dependencies {
     api project(':android_10')
+    compile 'com.google.code.gson:gson:2.8.1'
 }
 dependencies {
     implementation 'com.alibaba:fastjson:1.2.73'
 }
+
+
