csy last update

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,36 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="cn.edu.uestc.cssl.activities" >
+    package="cn.edu.uestc.cssl.activities">
+
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
-    <!--往sdcard中读写入数据的权限 -->
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" /> <!-- 往sdcard中读写入数据的权限 -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <!--在sdcard中创建/删除文件的权限 -->
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"
-        tools:ignore="ProtectedPermissions" />
-    <!-- This attribute is "false" by default on apps targeting Android Q. -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" /> <!-- 在sdcard中创建/删除文件的权限 -->
+    <uses-permission
+        android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"
+        tools:ignore="ProtectedPermissions" /> <!-- This attribute is "false" by default on apps targeting Android Q. -->
     <uses-permission android:name="android.permission.GET_TASKS" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/app_log"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:requestLegacyExternalStorage="true"
+        android:screenOrientation="landscape"
         tools:ignore="GoogleAppIndexingWarning"
-        tools:replace="android:icon" >
+        tools:replace="android:icon,android:label">
         <meta-data
             android:name="com.google.android.actions"
-            android:resource="@xml/actions" />
+            android:resource="@style/MyDialogStyleBottom" />
 
-        <activity android:name=".MainActivity" >
+        <activity
+            android:name=".TestActivity2"
+            android:exported="true" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -46,7 +50,21 @@
         -->
         <activity
             android:name=".RobotController"
-            android:label="@string/title_activity_robot_controller" />
+            android:label="@string/title_activity_robot_controller"
+            android:launchMode="singleTop" />
+        <activity
+            android:name="cn.edu.uestc.cssl.util.SelectPicPopupWindow"
+            android:theme="@style/MyDialogStyleBottom" />
+
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="ACRobot.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_provider" />
+        </provider>
     </application>
 
 </manifest>
