--- a/ac_core/build.gradle
+++ b/ac_core/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.jakewharton.butterknife'
 
 android {
     compileSdkVersion 29
@@ -33,14 +32,17 @@ configurations.all {
     }
 }
 dependencies {
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    testImplementation 'junit:junit:4.13.2'
 //    api group: 'org.jboss.netty', name: 'netty', version: '3.2.10.Final'
     api 'com.android.support:appcompat-v7:26.1.0'
     api 'com.android.support:design:26.1.0'
+    compile 'com.android.support:percent:26.1.0'
     api 'com.android.support.constraint:constraint-layout:1.1.3'
-//    api 'org.ros.android_core:android_10:0.3.3'
+    //cardView
+    api 'com.android.support:cardview-v7:26.1.0'
+    //recyclerView
+    api 'com.android.support:recyclerview-v7:26.1.0'
+    api 'org.ros.android_core:android_10:0.3.3'
     //RosJava
     api 'org.ros.rosjava_core:rosjava:0.3.6'
     api 'org.ros.rosjava_bootstrap:message_generation:0.3.3'
@@ -66,19 +68,11 @@ dependencies {
     //ButterKnife
     api 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
-    //cardView
-    api 'com.android.support:cardview-v7:26.1.0'
-    //recyclerView
-    api 'com.android.support:recyclerview-v7:26.1.0'
+
     //gson
     api 'com.google.code.gson:gson:2.8.2'
     //圆形imageView
     api 'de.hdodenhof:circleimageview:3.0.0'
     //qmui
     api 'com.qmuiteam:qmui:1.0.6'
-
-
-//    configurations {
-//        all*.exclude group: 'io.netty'
-//    }
 }
