--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.jakewharton.butterknife'
 
 android {
     compileSdkVersion 29
@@ -34,40 +35,56 @@ android {
         sourceCompatibility = '1.8'
         targetCompatibility = '1.8'
     }
+    packagingOptions {
+//        exclude 'META-INF/proguard/androidx-annotations.pro'
+    }
+}
+repositories {
+//    maven { url 'https://maven.google.com' }
+    maven { url "https://jitpack.io" }
 }
 
 dependencies {
     api project(':android_10')
-    compile 'com.google.code.gson:gson:2.8.1'
-
-
-
     // Optional -- Mockito framework
-//    compile 'org.ros.android_core:android_10:[0.3,0.4)'
-    compile 'org.ros.android_core:android_15:[0.3,0.4)'
-    compile 'com.github.rosjava.android_extras:gingerbread:[0.2,0.3]'
-//    compile 'org.ros.rosjava_core:rosjava:0.3.6'
-    compile 'org.apache.commons:commons-lang3:3.3.2'
-    compile 'com.squareup.okhttp:okhttp:2.6.0'
-    compile 'com.github.amlcurran.showcaseview:library:5.4.1'
+    implementation 'org.ros.android_core:android_15:[0.3,0.4)'
+    implementation 'com.github.rosjava.android_extras:gingerbread:[0.2,0.3]'
+    implementation 'com.squareup.okhttp:okhttp:2.6.0'
+    implementation 'com.github.amlcurran.showcaseview:library:5.4.1'
     // Optional -- Mockito framework
-    testCompile 'org.mockito:mockito-core:1.10.19'
-    androidTestCompile 'com.android.support:support-annotations:25.1.0'
-//    androidTestCompile 'com.android.support.test:runner:0.4'
-//    androidTestCompile 'com.android.support.test:rules:0.4'
-    // Optional -- Hamcrest library
-    androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
-    // Optional -- UI testing with Espresso
-//    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
-    // Optional -- UI testing with UI Automator
-//    androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v15'
+    implementation 'org.mockito:mockito-core:1.10.19'
+    implementation 'org.hamcrest:hamcrest-library:1.3'
+    //一堆图标的依赖
+    compile 'com.joanzapata.iconify:android-iconify-material-community:2.2.2'
+    compile 'com.joanzapata.iconify:android-iconify-entypo:2.2.2'
+    // Androidx
+//    implementation 'androidx.core:core-ktx:1.6.0'
+//    implementation 'androidx.appcompat:appcompat:1.3.1'
+//    implementation 'com.google.android.material:material:1.4.0'
+//    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+//    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+//    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
+//    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+//    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    testImplementation 'junit:junit:4.+'
+
+    //MQTT相关
+    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.0'
+    implementation 'org.apache.commons:commons-lang3:3.3.2'
+    implementation 'org.slf4j:slf4j-api:1.7.13'
+    implementation 'org.slf4j:slf4j-log4j12:1.7.13'
+
 }
 dependencies {
+
+
     implementation 'com.alibaba:fastjson:1.2.73'
     implementation 'com.carlos.voiceline:mylibrary:1.0.6'
-
-//    compile 'org.osmdroid:osmdroid-android:5.2@aar'
-//    compile(name:'osmbonuspack_v5.8.1', ext:'aar')
+    //图表
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 }
 
 
