--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,8 @@ ext {
 buildscript {
 
     repositories {
-        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+        maven{
+            url 'http://maven.aliyun.com/nexus/content/groups/public/'}
         google()
         jcenter()
     }
@@ -13,6 +14,7 @@ buildscript {
 
         classpath 'com.android.tools.build:gradle:3.2.1'
         classpath 'com.jakewharton:butterknife-gradle-plugin:9.0.0-rc2'
+//        classpath 'com.jakewharton:butterknife-gradle-plugin:10.1.0'
 
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -26,10 +28,11 @@ allprojects {
         maven {
             url "https://github.com/rosjava/rosjava_mvn_repo/raw/master"
         }
+        mavenCentral()
         maven {
             url "https://maven.google.com"
         }
-        mavenCentral()
+
         google()
         jcenter()
     }
